# esp32-hydroponic

./: .gitignore  README.md  esp32-hydroponic.code-workspace
temp-DS18B20/: CMakeLists.txt
temp-DS18B20/main/: CMakeLists.txt
